fix viewport on mobile

--- a/public/scss/_defaults.scss
+++ b/public/scss/_defaults.scss
@@ -20,8 +20,8 @@ html {
   background-position: center;
   background-repeat: repeat;
   background-color: rgb(30, 33, 41);
-  height: 100vh;
-  width: 100vw;
+  height: 100lvh;
+  width: 100lvw;
   overflow: hidden;
 }
 
